# senior_design_code_examples

ir_temp_sensor/: CMakeLists.txt
ir_temp_sensor_rpi/: requirements.txt  sensor_test.py  sensor_test_plot.py
